style: fix some visual error
fix visual error on cursor hovering elements in not centered texts

--- a/components/links/links-style.css
+++ b/components/links/links-style.css
@@ -15,6 +15,7 @@
     /* Add something to avoid rectangle images to wrap themselves*/
     object-fit: contain;
     border-radius: 15px;
+    cursor: pointer;
 }
 
 
