--- a/components/navigation/navigation-style.css
+++ b/components/navigation/navigation-style.css
@@ -17,8 +17,11 @@
 #navigation ul li {
     list-style-type: none;
     padding: 1em 1em;
+    min-width: 90px;
+    text-align: center;
     font-size: 1.4em;
     color: azure;
+    cursor: default;
 }
 
 #navigation ul li:hover {
@@ -43,7 +46,7 @@
     flex-direction: row;
     justify-content: center;
     padding: 1em;
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(22, 22, 22, 0.9);
     position: absolute;
 }
 
